--- a/iOS/QuantifyThis/QuantifyThis/Settings.bundle/Root.plist
+++ b/iOS/QuantifyThis/QuantifyThis/Settings.bundle/Root.plist
@@ -6,27 +6,17 @@
 	<array>
 		<dict>
 			<key>Title</key>
-			<string>Group</string>
+			<string>General</string>
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 		</dict>
 		<dict>
-			<key>AutocapitalizationType</key>
-			<string>None</string>
-			<key>AutocorrectionType</key>
-			<string>No</string>
-			<key>DefaultValue</key>
-			<string></string>
-			<key>IsSecure</key>
-			<false/>
-			<key>Key</key>
-			<string>name_preference</string>
-			<key>KeyboardType</key>
-			<string>Alphabet</string>
-			<key>Title</key>
-			<string>Name</string>
 			<key>Type</key>
-			<string>PSTextFieldSpecifier</string>
+			<string>PSTitleValueSpecifier</string>
+			<key>Title</key>
+			<string></string>
+			<key>Key</key>
+			<string></string>
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
