--- a/iOS/QuantifyThis/QuantifyThis/Settings.bundle/account.plist
+++ b/iOS/QuantifyThis/QuantifyThis/Settings.bundle/account.plist
@@ -4,7 +4,12 @@
 <dict>
 	<key>PreferenceSpecifiers</key>
 	<array>
-		<string>blaat</string>
+		<dict>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
+			<string>General</string>
+		</dict>
 	</array>
 </dict>
 </plist>
