--- a/QuantifyThisAndroid/AndroidManifest.xml
+++ b/QuantifyThisAndroid/AndroidManifest.xml
@@ -4,8 +4,9 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="15" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
 
     <application
         android:icon="@drawable/ic_launcher"
