--- a/QuantifyThisAndroid/AndroidManifest.xml
+++ b/QuantifyThisAndroid/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="15" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
 
     <application
         android:icon="@drawable/ic_launcher"
