--- a/QuantifyThisAppEngine/war/WEB-INF/web.xml
+++ b/QuantifyThisAppEngine/war/WEB-INF/web.xml
@@ -33,5 +33,9 @@
     <servlet-name>SystemServiceServlet</servlet-name>
     <url-pattern>/_ah/spi/*</url-pattern>
   </servlet-mapping>
+  
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+</welcome-file-list>
 
 </web-app>
